mass-cfg-attr-tests/tests/failing_with_useful_errors/group_of_groups.stderr
error: this group may not contain sub groups
 --> tests/failing_with_useful_errors/group_of_groups.rs:6:34
  |
6 | #[mass_cfg_attr(test, [must_use, [deprecated]])]
  |                                  ^^^^^^^^^^^^

error[E0422]: cannot find struct, variant or union type `ThreeInts` in this scope
  --> tests/failing_with_useful_errors/group_of_groups.rs:19:5
   |
19 |     ThreeInts {
   |     ^^^^^^^^^ not found in this scope
